--- a/Sample/Views/Shared/_LoginPartial.cshtml
+++ b/Sample/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Identity
 @using Sample.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
