--- a/Sample/Views/_ViewImports.cshtml
+++ b/Sample/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using Sample
+@using Microsoft.AspNetCore.Identity
+@using Sample
 @using Sample.Models
 @using Sample.Models.AccountViewModels
 @using Sample.Models.ManageViewModels
-@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
